build: enable Gradle daemon and increase memory allocation
Enable Gradle daemon for faster builds and increase JVM memory settings to prevent out-of-memory errors during compilation

--- a/gradle.properties
+++ b/gradle.properties
@@ -22,7 +22,7 @@ kotlin.code.style=official
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
 
-# Disable Gradle daemon due to insufficient memory
-org.gradle.daemon=false
-# Minimal JVM arguments
-org.gradle.jvmargs=-Xmx256m -Dfile.encoding=UTF-8
+# Enable Gradle daemon with sufficient memory
+org.gradle.daemon=true
+# JVM arguments with increased memory allocation
+org.gradle.jvmargs=-Xmx2048m -XX:MaxMetaspaceSize=512m -Dfile.encoding=UTF-8
