--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,7 @@
 [versions]
 agp = "8.7.2"
 kotlin = "1.9.22"
+composeCompiler = "1.5.8"
 coreKtx = "1.12.0"
 junit = "4.13.2"
 junitVersion = "1.1.5"
